CommandWindow fixed on IE. fixes #2273. reviewed by DG
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@33442 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenUI3/browser/resources/css/xtheme-zenoss.css
+++ b/Products/ZenUI3/browser/resources/css/xtheme-zenoss.css
@@ -1096,6 +1096,9 @@ td.x-date-mp-sel a{
     line-height: 21px;
     font-weight: bold;
 }
+.ext-ie .x-window-header {
+    height: 24px;
+}
 body.x-body-masked .x-window-mc, body.x-body-masked .x-window-plain .x-window-mc{
     background: transparent url(../img/xtheme-zenoss/window/left-right.png) repeat;
 }
